--- a/_posts/2017-03-09-CS224n.md
+++ b/_posts/2017-03-09-CS224n.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "NLP with Deep Learning"
+title: "CS224n: NLP with Deep Learning"
 date: 2017-03-09 22:30:00
 categories: Learning
 ---
 
 # [CS224n: Natural Language Processing with Deep Learning](http://web.stanford.edu/class/cs224n/)
 
-# 1 
+
 
